# salin

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DESIGN.md  PRODUCT.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replace_lucide.mjs  run-local.sh  run.bat  run.sh  tsconfig.base.json
apps/api/: Dockerfile  openapi.json  pyproject.toml
apps/api/salin_api/: main.py  recording_sources.py
apps/api/salin_api/api/: routes.py
apps/api/salin_api/core/: __init__.py  container.py  settings.py
apps/api/salin_api/db/: session.py
apps/api/salin_api/models/: __init__.py  app_setting.py  generated_notes.py  processing_job.py  recording.py  transcript_segment.py
apps/api/salin_api/repositories/: app_settings.py  recordings.py
apps/api/salin_api/schemas/: __init__.py  recordings.py  settings.py
apps/api/salin_api/services/: __init__.py  app_settings.py  exports.py  notes.py  queue.py
apps/api/salin_api/storage/: __init__.py  r2.py
apps/api/scripts/: export_openapi.py
apps/api/tests/: conftest.py  test_queue.py  test_recordings_api.py  test_storage.py
apps/worker/: Dockerfile  pyproject.toml
apps/worker/salin_worker/: __init__.py  tasks.py
apps/worker/salin_worker/providers/: __init__.py  base.py  diarization.py  faster_whisper_provider.py  groq_provider.py  pyannote_provider.py
apps/worker/salin_worker/services/: __init__.py  audio.py  diarization.py  notes.py  processing.py  youtube.py
apps/worker/tests/: test_audio.py  test_diarization.py  test_processing.py  test_pyannote_provider.py  test_run_sh.py  test_youtube.py
docs/: architecture.md  project-plan.md  setup.md  tasks.md  testing.md  ui.md
infra/: Caddyfile.prod  docker-compose.prod.yml  nginx.prod.conf  (+1 more)
(+62 files in other folders)
