[project]
name = "salin-api"
version = "0.1.0"
description = "FastAPI service for the Salin transcript pipeline."
requires-python = ">=3.12"
dependencies = [
  "boto3>=1.35.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "pydantic-settings>=2.6.0",
  "psycopg[binary]>=3.2.0",
  "python-multipart>=0.0.12",
  "redis>=5.2.0",
  "rq>=1.16.2",
  "sqlalchemy>=2.0.36",
  "uvicorn>=0.32.0"
]

[dependency-groups]
dev = [
  "httpx>=0.27.2",
  "pytest>=8.3.3",
  "ruff>=0.7.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
