[project]
name = "salin-worker"
version = "0.1.0"
description = "RQ worker for Salin transcript processing."
requires-python = ">=3.12"
dependencies = [
  "faster-whisper>=1.0.3",
  "groq>=0.11.0",
  "pyannote.audio>=3.1.0",
  "redis>=5.2.0",
  "rq>=1.16.2",
  "salin-api",
  "bgutil-ytdlp-pot-provider>=1.3.1",
  "yt-dlp[default]>=2026.6.9"
]

[tool.uv.sources]
salin-api = { workspace = true }

[dependency-groups]
dev = [
  "pytest>=8.3.3",
  "ruff>=0.7.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
